# rustic

./: Cargo.toml  README.md
shaders/: basic.frag.glsl  basic.vert.glsl
sprites/proj/: charge.aseprite  test.aseprite
src/: drawable.rs  ecs.rs  gen_vec.rs  main.rs  main_old.rs  sokol.rs  world_objects.rs
src/components/: collision.rs  drawable.rs  health.rs  input_movement.rs  keyboard_handling.rs  mod.rs  physics.rs  spawn_properties.rs
src/object/: cube.rs  mod.rs  object.rs
src/objects/: mod.rs
src/shaders/: mod.rs
src/sokol/: frame.rs  input.rs  mod.rs
src/stage/: camera.rs  mod.rs
src/system/: mod.rs
src/systems/: collision.rs  collision_resolver.rs  input.rs  mod.rs  movement.rs  render.rs  spawner.rs
src/textures/: mod.rs
src/world_objects/: cube.rs  mod.rs
