[package]
name = "rustic"
version = "0.1.0"
edition = "2024"

[dependencies]
parry2d= "0.18.0"
bitmask-enum = "2.2.5"

[dependencies.specs]
version = "0.20.0"
features = [ "shred-derive", "parallel" ]


[dependencies.sokol]
version="*"
git="https://github.com/floooh/sokol-rust.git" 

[[bin]]
name = "rustic"
path = "src/main.rs"
