[package]
name = "rustic"
version = "0.1.0"
edition = "2024"

[dependencies]
parry2d= "0.18.0"
bitmask-enum = "2.2.5"
notify = "8.0.0"
stb_image_rust = "2.27.2"
futures = "0.3.31"

[dependencies.specs]
version = "0.20.0"
features = [ "shred-derive", "parallel" ]


[dependencies.sdl3]
version = "0.14.19"
features = [ ]

[dependencies.miniquad]
version ="*"


[[bin]]
name = "rustic"
path = "src/main.rs"
